<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- DE SERIE -->
    <string name="app_name">EuroMillones</string>

    <!-- Zona Privada -->
    <string name="title_Saludo">Welcome to EuroMillones</string>
    <string name="title_Sub_Saludo">An AteneaSystems APP</string>
    <string name="text_Nombre_Empresa">AteneaSystems</string>
    <string name="text_Web_Empresa">www.euromillones.ateneasystems.es</string>

    <!-- Action Bar -->
    <string name="text_action_about">About...</string>
    <string name="text_action_login">Login</string>
    <string name="text_action_settings">Settings</string>
    <string name="text_action_cerrar_sesion">Sign Off</string>

    <!-- Seccion Settings -->
    <string name="title_SETTINGS">Settings</string>

    <!-- Seccion About -->
    <string name="title_ABOUT">About the Device</string>
    <string name="tv_EMPTY">--</string>
    <string name="tv_ID">ID</string>
    <string name="tv_USE_MAIL_GOOGLE">Google Account</string>
    <string name="tv_Version_Android">Android Version</string>
    <string name="error_Version_Android">Error - Unknown</string>
    <string name="bt_Mostrar_Datos">View Data</string>

    <!-- Seccion Login -->
    <string name="title_Login">Login</string>
    <string name="tv_PASS">Pass</string>
    <string name="bt_Comprobar">Check Data</string>
    <string name="tv_User_Error">Incorrect User</string>
    <string name="cb_Recordar">Remember</string>
    <string name="bt_Crear_Cuenta">Create Account</string>

    <!-- Seccion Registro y PostRegistroActivity -->
    <string name="title_activity_registro">Register</string>
    <string name="tv_Pass">Your Pass</string>
    <string name="tv_Pass_nota">It may change after</string>
    <string name="tv_Mail">Your Mail</string>
    <string name="tv_Mail_nota">You will receive a message from the server</string>
    <string name="tv_Nombre">Your Name</string>
    <string name="tv_Nombre_nota">It may change after</string>
    <string name="title_activity_post_registro">You\'re already registered</string>
    <string name="tv_activity_post_registro_info">We currently do not have your account active. When the account is active, you will receive an email</string>
    <string name="bt_Aceptar">Accept</string>

    <!-- Seccion Predicciones -->
    <string name="title_fragment_predicciones">Predictions</string>
    <string name="tv_Mas_Repetido">More Repeated Numbers</string>
    <string name="tv_Mas_Repetido_Mes">More Repeated Numbers (last month)</string>
    <string name="tv_SemiAleatorio">Semi-Random Numbers</string>
    <string name="tv_SemiAleatorio_nota">You can change the random percentage from options</string>
    <string name="bt_Buscar_Otro">Search Another Number</string>

    <!-- Seccion Predicciones -->
    <string name="title_fragment_ultimos_resultados">Latest Results</string>

    <!-- Seccion Mi Cuenta -->
    <string name="title_fragment_mi_cuenta">My Account</string>
    <string name="tv_nombre">Name</string>
    <string name="tv_apellidos">Surname</string>
    <string name="tv_telefono">Phone</string>
    <string name="tv_mail_info">Mail</string>
    <string name="tv_cambiar_pass">Change Password</string>

    <!-- Seccion Cambiar Pass -->
    <string name="title_activity_cambiar_pass">Change Password</string>
    <string name="tv_pass_actual">Current Password</string>
    <string name="tv_pass_nuevo">New Password</string>
    <string name="tv_pass_nuevo_repetir">Repeat New Password</string>
    <string name="tv_error_pass_actual">Error - The current password is incorrect</string>
    <string name="tv_error_pass_nuevo">Error - The new passwords do not match</string>
    <string name="tv_pass_cambiado_correctamente">Password changed successfully</string>

    <!-- Seccion Nuevo Resultado -->
    <string name="title_fragment_nuevo_resultado">New Result</string>
    <string name="tv_fecha">Date</string>
    <string name="tv_numeros">Numbers</string>
    <string name="tv_n1">N1</string>
    <string name="tv_n2">N2</string>
    <string name="tv_n3">N3</string>
    <string name="tv_n4">N4</string>
    <string name="tv_n5">N5</string>
    <string name="tv_estrellas">Stars</string>
    <string name="tv_e1">E1</string>
    <string name="tv_e2">E2</string>

    <!-- Seccion Nuevo Resultado -->
    <string name="title_fragment_about">About</string>

    <!-- Menu Lateral -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="bl_Predicciones">Predictions</string>
    <string name="bl_Nuevo_Resultado">Add Result</string>
    <string name="bl_Mi_Cuenta">My Account</string>
    <string name="bl_Admin_Usuarios">Admin. Users</string>
    <string name="bl_Copia_Seguridad">Save Data Base</string>

    <!-- Botones Comunes -->
    <string name="bt_guardar">Save</string>

    <!-- Configuracion -->
    <!-- Titulos Apartados -->
    <string name="tv_opciones_title_Resultados">Results</string>
    <string name="tv_opciones_title_Notificaciones">Notifications</string>
    <!-- Titulos Items Opciones -->
    <string name="tv_opciones_titleItem_Ultimos_Resultados">Latest Results</string>
    <string name="tv_opciones_titleItem_Notificar_Nuevos_Resultados">Report New Results</string>
    <string name="tv_opciones_titleItem_Notificación_Sonora">Notification Sound</string>
    <string name="tv_opciones_titleItem_Vibración">Vibration</string>
    <string name="tv_opciones_titleItem_Led">Led</string>
    <string name="tv_opciones_titleItem_Aleatorio">Percentage Random</string>
    <!-- Descripcion Items Opciones -->
    <string name="tv_opciones_descripcionItem_Cantidad_Sorteos_Mostrar">Number of drawings to show</string>
    <string name="tv_opciones_descripcionItem_Notificar_Sorteo_Nuevo">Receive notification when a new draw is made</string>
    <string name="tv_opciones_descripcionItem_Notificar_Sonido">It will sound when notified</string>
    <string name="tv_opciones_descripcionItem_Notificar_Vibracion">It will vibrate when notified</string>
    <string name="tv_opciones_descripcionItem_Notificar_Led">Use Led Device</string>
    <string name="tv_opciones_descripcionItem_Aleatorio">Regarding the repeated numbers</string>
    <string name="bl_Ultimos_Resultados">Latest Results</string>
    <string name="tv_User">Mail</string>

    <!-- Seccion NFC -->
    <string name="title_activity_nfc">Tag NFC</string>
    <string name="tv_descripcion_nfc">If your device supports NFC You can bring a sticker, keychain, bracelet... to save your login details and to enter with just closer to the device without typing a password.</string>
    <string name="text_action_nfc">NFC</string>
    <string name="bt_Solicitar_Nuevo_Pass">Sol. Nueva Contr.</string>
    <string name="title_activity_restore_pass">RestorePass</string>

    <!-- Seccion Copia Seguridad -->
    <string name="tv_activity_restore_pass">Introduce tu correo electronico. Recibiras un correo con los pasos a seguir para tener una nueva contraseña.</string>
    <string name="tv_Copiar_Base_De_Datos">Realiza una copia completa de la Base de Datos</string>
    <string name="bt_Descargar_Base_De_Datos">Descargar en formato .SQL</string>

    <!-- Seccion Ult. Resultados -->
    <string name="tv_activity_ultimos_res_compartir">Share with...</string>

    <!-- Seccion Admin. Usuarios -->
    <string name="tv_usuarios">Users</string>
    <string name="tv_colaboradores">Contributors</string>
    <string name="tv_administradores">Administrators</string>
    <string name="bt_mostrar">Load All</string>
    <string name="tv_activity_admin_user_configuracion">Load Configuration...</string>
    <string name="title_activity_list_users">User Lists </string>

    <string name="title_activity_ficha_user">User Listing</string>
    <string name="tv_usuario">User</string>
    <string name="tv_colaborador">Contributor</string>
    <string name="tv_administrador">Administrator</string>
    <string name="banner_ad_unit_miID">ca-app-pub-0007505393196705/7809013401</string>
    <string name="openDrawer">abierto</string>
    <string name="closeDrawer">cerrado</string>


</resources>