<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/Blanco_Puro"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FragmentPredicciones">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/tv_Mas_Repetido"
                android:textColor="@color/Texto_Primario"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_nmasRepetido"
                android:textColor="@color/Texto_Secundario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/tv_EMPTY"
                android:textSize="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/Texto_Primario"
                android:text="@string/tv_Mas_Repetido_Mes"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_nmasRepetidoMes"
                android:layout_width="fill_parent"
                android:textColor="@color/Texto_Secundario"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/tv_EMPTY"
                android:textSize="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_Primario"
                android:gravity="left"
                android:text="@string/tv_SemiAleatorio"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Texto_Primario"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tv_SemiAleatorio_nota"
                android:id="@+id/notaSemiAleatorio" />

            <TextView
                android:id="@+id/tv_nSemiAleatorio"
                android:layout_width="fill_parent"
                android:textColor="@color/Texto_Secundario"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/tv_EMPTY"
                android:textSize="20dp" />

            <Button
                android:drawableLeft="@drawable/ic_refresh_black"
                android:id="@+id/btn_BuscarOtroNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/bt_Buscar_Otro" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>