<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".MainActivity"
    android:animateLayoutChanges="true"
    tools:showIn="@layout/activity_main">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- Resto de la interfaz de usuario -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/Texto_Primario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="@string/title_Saludo"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/Texto_Primario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_Sub_Saludo"
                android:textSize="20dp"

                android:textStyle="bold" />


            <TextView
                android:textColor="@color/Texto_Secundario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center_horizontal"
                android:text="@string/tv_EMPTY"
                android:id="@+id/tv_version" />


            <ImageView
                android:paddingTop="15dp"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:src="@drawable/img_ateneasystems" />

            <TextView
                android:textColor="@color/Texto_Secundario"
                android:paddingTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center_horizontal"
                android:text="@string/text_Nombre_Empresa" />

            <TextView
                android:paddingTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center_horizontal"
                android:id="@+id/tv_web"
                android:textColorLink="@color/Negro_Puro"
                android:textColor="@color/Negro_Puro"
                android:text="@string/text_Web_Empresa" />
            <com.google.android.gms.ads.AdView
                android:layout_marginTop="22dp"
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_miID" />
        </LinearLayout>



    </FrameLayout>
</LinearLayout>