<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/Blanco_Puro"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login_Activity">


    <ScrollView
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/Texto_Primario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/tv_User"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:textColor="@color/Texto_Secundario"
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress" />


            <TextView
                android:textColor="@color/Texto_Primario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/tv_PASS"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:textColor="@color/Texto_Secundario"
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:password="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <CheckBox
                android:textColor="@color/Texto_Secundario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_weight="5"
                android:text="@string/cb_Recordar"
                android:id="@+id/cb_recordar" />
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:id="@+id/btn_snPass"
                    android:drawableLeft="@drawable/ic_key_plus"
                    android:text="@string/bt_Solicitar_Nuevo_Pass"
                    />

            </LinearLayout>
            <TextView
                android:textColor="@color/Rosa_VLCTeam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""
                android:id="@+id/tv_respuesta"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/pb_cargando" />

        <Button
            android:drawableLeft="@drawable/ic_registrar_user_negro"
            android:layout_weight="5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_Crear_Cuenta"
            android:id="@+id/btn_registro" />

        <Button
            android:drawableLeft="@drawable/ic_comprobar_user_negro"
            android:layout_weight="5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_Comprobar"
            android:id="@+id/btn_login" />
    </LinearLayout>


</LinearLayout>